fix header alignment without apps on mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -2311,10 +2311,15 @@ input[type='checkbox'] {
   align-items: center;
 }
 
+.header:not(.header--has-app) {
+  grid-template-columns: 1fr 2fr 1fr;
+}
+
 @media screen and (min-width: 990px) {
   .header {
     grid-template-columns: 1fr 2fr 1fr;
   }
+
   .header--top-left,
   .header--middle-left:not(.header--has-menu) {
     grid-template-areas:
